package Gear;

public class BiggoronSword extends Weapon {

    public BiggoronSword() {
        super("Biggoron's Sword", 5);
    }
}
