package Gear;

public class HylianShield extends Shield {

    public HylianShield() {
        super( "Hylian Shield", 3);
    }
}
