package Gear;

public class KokiriShield extends Shield {

    public KokiriShield() {
        super("Kokiri Shield", 1);
    }
}
