package Gear;

public class Shield extends DefensiveGear {

    public Shield(String name, int defense) {
        super(name, defense);
    }
}
