package Gear;

public class Spell extends OffensiveGear {

    public Spell(String name, int attack) {
        super(name, attack);
    }
}
