package Gear;

public class WingardiumLeviosa extends Spell {

    public WingardiumLeviosa() {
        super("Wingardium Leviosa", 2);
    }
}
